centered/fixed 2 line cut off for active markets bars

--- a/packages/augur-ui/src/modules/account/components/open-markets.styles.less
+++ b/packages/augur-ui/src/modules/account/components/open-markets.styles.less
@@ -36,6 +36,7 @@
 .OpenMarketsRow {
   min-height: @size-48;
   max-height: @size-48;
+  align-items: center;
 
   > div {
     padding: 0 0 0 @size-16;
